...
                icon: const Icon(Icons.close),
              ),
              actions: [
                Padding(
                  padding: const EdgeInsets.only(right: 16),
                  child: TextButton(
                    key: const ValueKey("save_task"),
                    onPressed: () {
                      saveTask(context, state);
                    },
                    child: Text(
                      AppLocalizations.of(context).save,
                      style: const TextStyle(
...
                  Padding(
                    padding: const EdgeInsets.all(8.0),
                    child: Align(
                      alignment: Alignment.center,
                      child: TaskTextField(
                          controller: _taskController,
                          key: const ValueKey("text_field")),
                    ),
                  ),
                  Align(
                    alignment: Alignment.centerLeft,
                    child: TaskPriorityDropDownMenu(task: state.editedTask),
                  ),
...
